# libcdlcpp

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  cdl.cpp  cdl.h
test/ctest/: CMakeLists.txt  assert_macro.h  ctest_create_cdl.cpp  ctest_getters.cpp  ctest_read_cdl.cpp  ctest_savecdl.cpp
